# vauth

./: Cargo.toml  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  the-project.md  virtual-authenticator-brief-phase2.md
.cargo/: config.toml
.github/workflows/: scorecard.yml
src/: attestation_ca.rs  audit.rs  config.rs  diagnostics.rs  lib.rs  main.rs  privsep.rs
src/ctap2/: attestation.rs  get_assertion.rs  make_credential.rs  mod.rs  types.rs
src/ctaphid/: dispatch.rs
src/face/: camera.rs  mod.rs  models.rs  overlay.rs
src/store/: index.rs
src/up/: lockout.rs  mod.rs  pam_uv.rs  prompt.rs  uv_cache.rs
tests/: ctap2_get_info.rs  ctaphid_init.rs  face_engine.rs  store_roundtrip.rs  tpm_smoke.rs
