[package]
name = "vauth"
version = "0.1.6"
edition = "2024"
description = "A FIDO2/CTAP2 authenticator daemon for Linux backed by TPM 2.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/edg-l/fidorium"
homepage = "https://github.com/edg-l/fidorium"
documentation = "https://docs.rs/fidorium"
categories = ["authentication", "cryptography", "command-line-utilities", "os::linux-apis"]
keywords = ["fido2", "ctap2", "webauthn", "tpm2", "linux"]

[lib]
name = "vauth"
path = "src/lib.rs"

[[bin]]
name = "vauth"
path = "src/main.rs"

[dependencies]
uhid-virt  = "0.0.8"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
thiserror  = "2.0"
anyhow     = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand       = "0.8"
clap       = { version = "4", features = ["derive"] }
tss-esapi  = "8.0.0-alpha.1"
sha2       = "0.10"
directories = "6"
serde      = { version = "1", features = ["derive"] }
ciborium   = "0.2"
aes-gcm    = "0.10"
pam-client2 = { version = "0.5", default-features = false }
serde_json = "1"
chrono     = { version = "0.4", features = ["serde"] }
base64     = "0.22"
p256       = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
ecdsa      = { version = "0.16", features = ["signing", "der"] }
libc       = "0.2"
time       = "0.3"
rcgen      = { version = "0.14", features = ["x509-parser"] }
fd-lock    = "4"

[dev-dependencies]
tempfile = "3"
